[gd_scene load_steps=55 format=3 uid="uid://3ufnrhben4du"]

[ext_resource type="Texture2D" uid="uid://dufvlm0dfly48" path="res://assets/enemies/Green_Slime/Idle.png" id="1_abaxn"]
[ext_resource type="Script" path="res://scripts/boss_01.gd" id="1_rtad3"]
[ext_resource type="Texture2D" uid="uid://cffbsdkft76uc" path="res://assets/enemies/Green_Slime/Jump.png" id="3_5b6od"]
[ext_resource type="Texture2D" uid="uid://bq6yxxniqygxp" path="res://assets/enemies/Green_Slime/Run.png" id="3_g7s1j"]
[ext_resource type="Texture2D" uid="uid://rb2378cs0omc" path="res://assets/enemies/Green_Slime/Run+Attack.png" id="4_ei2bi"]
[ext_resource type="PackedScene" uid="uid://baspxqpxsjvyf" path="res://scenes/tools/danger_zone.tscn" id="6_pw4ye"]
[ext_resource type="AudioStream" uid="uid://bbiskxt5bdeij" path="res://assets/audio/playerhit.mp3" id="7_b73hv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5xyyh"]
atlas = ExtResource("1_abaxn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7cgd"]
atlas = ExtResource("1_abaxn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_slq22"]
atlas = ExtResource("1_abaxn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r64a"]
atlas = ExtResource("1_abaxn")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gecn"]
atlas = ExtResource("1_abaxn")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru0f4"]
atlas = ExtResource("1_abaxn")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3qjn"]
atlas = ExtResource("1_abaxn")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_33o6o"]
atlas = ExtResource("1_abaxn")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm35a"]
atlas = ExtResource("3_5b6od")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3vuw"]
atlas = ExtResource("3_5b6od")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx3q8"]
atlas = ExtResource("3_5b6od")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsfyn"]
atlas = ExtResource("3_5b6od")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uknmy"]
atlas = ExtResource("3_5b6od")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7b3p"]
atlas = ExtResource("3_5b6od")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jid8"]
atlas = ExtResource("3_5b6od")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fyjd"]
atlas = ExtResource("3_5b6od")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc77p"]
atlas = ExtResource("3_5b6od")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7g8r"]
atlas = ExtResource("3_5b6od")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mecoh"]
atlas = ExtResource("3_5b6od")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iosl"]
atlas = ExtResource("3_5b6od")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_02vko"]
atlas = ExtResource("3_5b6od")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mep0r"]
atlas = ExtResource("3_g7s1j")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv2di"]
atlas = ExtResource("3_g7s1j")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d4ys"]
atlas = ExtResource("3_g7s1j")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1t42"]
atlas = ExtResource("3_g7s1j")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_teiqg"]
atlas = ExtResource("3_g7s1j")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbu2c"]
atlas = ExtResource("3_g7s1j")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_230ex"]
atlas = ExtResource("3_g7s1j")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp5sb"]
atlas = ExtResource("4_ei2bi")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_65gd5"]
atlas = ExtResource("4_ei2bi")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_krqf8"]
atlas = ExtResource("4_ei2bi")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_77nqy"]
atlas = ExtResource("4_ei2bi")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6xto"]
atlas = ExtResource("4_ei2bi")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4xi8"]
atlas = ExtResource("4_ei2bi")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u21qp"]
atlas = ExtResource("4_ei2bi")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v448d"]
atlas = ExtResource("4_ei2bi")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7vs0"]
atlas = ExtResource("4_ei2bi")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ivwx"]
atlas = ExtResource("4_ei2bi")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_o5td8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xyyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7cgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slq22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r64a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gecn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru0f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3qjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33o6o")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm35a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3vuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx3q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsfyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uknmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7b3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jid8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fyjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc77p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7g8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mecoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iosl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02vko")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mep0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv2di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d4ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1t42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teiqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbu2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_230ex")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp5sb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65gd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krqf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77nqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6xto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4xi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u21qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v448d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7vs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ivwx")
}],
"loop": true,
"name": &"super_attack",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myh3x"]
size = Vector2(249.375, 72.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7m808"]
size = Vector2(121, 35)

[sub_resource type="Animation" id="Animation_eqct2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../hitbox/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6.5, -128.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RayCast2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-61, -63)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../DangerZone/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, -17)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, -38)]
}

[sub_resource type="Animation" id="Animation_l1xam"]
resource_name = "jump"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../hitbox/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.6, 0.7, 0.8, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(6.5, -128.5), Vector2(-15, -252), Vector2(-7, -266), Vector2(6, -278), Vector2(8, -279), Vector2(7, -267), Vector2(-19, -189), Vector2(6.5, -128.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RayCast2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-100, -59), Vector2(-104, -151), Vector2(-127, -215), Vector2(-100, -59)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../DangerZone/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.6, 0.7, 0.8, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-4, -17), Vector2(-13, -138), Vector2(-9, -158), Vector2(7, -162), Vector2(11, -166), Vector2(14, -151), Vector2(-22, -76), Vector2(-4, -17)]
}

[sub_resource type="Animation" id="Animation_ghba6"]
resource_name = "run"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../hitbox/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(34, -128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DangerZone/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(43, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(41, -42)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5c8ok"]
_data = {
"RESET": SubResource("Animation_eqct2"),
"jump": SubResource("Animation_l1xam"),
"run": SubResource("Animation_ghba6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mg582"]
radius = 256.049

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n1v5m"]
radius = 41.0
height = 292.0

[node name="Boss_01" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_rtad3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -322)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_o5td8")
animation = &"jump"
autoplay = "default"
frame_progress = 0.551426
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11, -38)
shape = SubResource("RectangleShape2D_myh3x")

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(6.5, -128.5)
shape = SubResource("RectangleShape2D_7m808")
debug_color = Color(0.319734, 0.614355, 0.336432, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_5c8ok")
}
speed_scale = 0.913

[node name="sight" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="sight"]
position = Vector2(0, -73)
shape = SubResource("CircleShape2D_mg582")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-61, -63)
rotation = 1.5708
scale = Vector2(10, 1)

[node name="DangerZone" parent="." instance=ExtResource("6_pw4ye")]
position = Vector2(4, -39)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerZone"]
position = Vector2(-4, -17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n1v5m")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_b73hv")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_sight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
